Apache Tez Change Log
=====================


Release 0.8.0: Unreleased

INCOMPATIBLE CHANGES
  TEZ-2468. Change the minimum Java version to Java 7.

ALL CHANGES:
  TEZ-2548. TezClient submitDAG can hang if the AM is in the process of shutting down.
  TEZ-2473. Consider using RawLocalFileSystem in MapOutput.createDiskMapOutput.
  TEZ-2538. ADDITIONAL_SPILL_COUNT wrongly populated for DefaultSorter with multiple partitions.
  TEZ-2489. Disable warn log for Timeline ACL error when tez.allow.disabled.timeline-domains set to true.
  TEZ-2376. Remove TaskAttemptEventType.TA_DIAGNOSTICS_UPDATE
  TEZ-2509. YarnTaskSchedulerService should not try to allocate containers if AM is shutting down.
  TEZ-2506. TestAysncHttpConnection failing.
  TEZ-2503. findbugs version isn't reported properly in test-patch report.
  TEZ-2198. Fix sorter spill counts.
  TEZ-1883. Change findbugs version to 3.x.
  TEZ-2440. Sorter should check for indexCacheList.size() in flush().
  TEZ-2490. TEZ-2450 breaks Hadoop 2.2 and 2.4 compatability.
  TEZ-2450. support async http clients in ordered & unordered inputs.
  TEZ-2454. Change FetcherOrderedGroup to work as Callables instead of blocking threads.
  TEZ-2466. tez-history-parser breaks hadoop 2.2 compatability.
  TEZ-2463. Update site for 0.7.0 release
  TEZ-2461. tez-history-parser compile fails with hadoop-2.4.
  TEZ-2076. Tez framework to extract/analyze data stored in ATS for specific dag.
  TEZ-2436. Tez UI: Add cancel button in column selector.
  TEZ-2351. Remove GroupByOrderbyMRRTest example from tez-tests.
  TEZ-2419. Inputs/Outputs should inform the Processor about Interrupts when interrupted during a blocking Op.
  TEZ-1752. Inputs / Outputs in the Runtime library should be interruptable.
  TEZ-1970. Fix javadoc warnings in SortMergeJoinExample.

Release 0.7.1: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:
  TEZ-2554. Tez UI: View log link does not correctly propagate login crendential to read log from yarn web.