@@ -737,7 +737,7 @@
         <plugin>
           <groupId>com.github.eirslett</groupId>
           <artifactId>frontend-maven-plugin</artifactId>
-          <version>0.0.16</version>
+          <version>0.0.23</version>
         </plugin>
         <plugin>
           <artifactId>exec-maven-plugin</artifactId>
